<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>hu.unideb.inf</groupId>
    <artifactId>log4j-wonderful</artifactId>
    <version>1.0</version>
    <developers>
        <developer>
            <id>jeszy</id>
            <name>Péter Jeszenszky</name>
            <email>jeszenszky.peter@inf.unideb.hu</email>
            <organization>Faculty of Informatics, University of Debrecen</organization>
            <organizationUrl>https://www.inf.unideb.hu/</organizationUrl>
        </developer>
    </developers>
    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <log4j.version>2.25.3</log4j.version>
        <exec.mainClass>pkg.Main</exec.mainClass>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.21.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
        <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>26</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
            </plugin>
        </plugins>
    </build>
</project>
